--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./dist/vue-components.umd.js",
   "module": "./dist/vue-components.es.js",
   "typings": "./dist/src/main.d.ts",
-  "version": "1.22.0",
+  "version": "2.0.0",
   "exports": {
     ".": {
       "import": "./dist/vue-components.es.js",
@@ -53,8 +53,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@govflanders/vl-ui-autocomplete": "^18.1.1",
-    "@govflanders/vl-ui-design-system-style": "^1.0.1-alpha.0",
-    "@govflanders/vl-ui-design-system-vue3": "^1.0.2-alpha.0",
+    "@govflanders/vl-ui-design-system-style": "^1.0.17",
+    "@govflanders/vl-ui-design-system-vue3": "3.0.2",
     "@govflanders/vl-ui-select": "^20.0.10",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@tinymce/tinymce-vue": "^4",
@@ -85,17 +85,19 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@storybook/addon-essentials": "^7.6.4",
-    "@storybook/addon-interactions": "^7.6.4",
-    "@storybook/addon-links": "^7.6.4",
-    "@storybook/addon-mdx-gfm": "^7.6.4",
-    "@storybook/addon-viewport": "^7.6.4",
-    "@storybook/blocks": "^7.6.4",
-    "@storybook/builder-vite": "^7.6.4",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-mdx-gfm": "^8.4.7",
+    "@storybook/addon-viewport": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/builder-vite": "^8.4.7",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/vue3-vite": "^7.6.4",
+    "@storybook/vue3-vite": "^8.4.7",
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
-    "@types/node": "^18.14.2",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/lodash": "^4.17.14",
+    "@types/node": "20",
     "@types/proj4": "^2.5.2",
     "@types/tinymce": "^4.6.6",
     "@types/uuid": "^9.0.3",
@@ -105,9 +107,9 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.2",
-    "@vue/tsconfig": "^0.1.3",
+    "@vue/tsconfig": "^0.7.0",
     "chromatic": "^6.17.3",
-    "cypress": "^13.2.0",
+    "cypress": "^13.17.0",
     "cypress-watch-and-reload": "^1.10.6",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.8.0",
@@ -120,21 +122,18 @@
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "prettier": "^2.8.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "rollup": "^4.30.0",
+    "rollup-plugin-visualizer": "^5.13.1",
     "sass": "^1.62.0",
     "start-server-and-test": "^2.0.0",
-    "storybook": "^7.6.4",
+    "storybook": "^8.4.7",
     "tslib": "^2.5.0",
-    "typescript": "~4.8.4",
-    "vite": "^4.1.4",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.10",
     "vite-plugin-static-copy": "^1.0.6",
     "vue-eslint-parser": "^9.1.1",
-    "vue-tsc": "^1.6.5"
-  },
-  "peerDependencies": {
-    "@govflanders/vl-ui-design-system-style": "^1.0.0-alpha.3",
-    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes"
-  },
-  "_id": "vue_component_library@1.18.0"
+    "vue-tsc": "^2.2.0"
+  }
 }
