--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
       "import": "./dist/scss/main.scss",
       "require": "./dist/scss/main.scss"
     }
+    ,
+    "./eslint": {
+      "import": "./dist/eslint.config.js",
+      "require": "./dist/eslint.config.js"
+    }
   },
   "repository": {
     "type": "git",
@@ -40,7 +45,7 @@
     "test:unit:dev": "cypress open --component",
     "type-check": "vue-tsc --noEmit",
     "type-generation": "vue-tsc --declaration --emitDeclarationOnly",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -101,24 +106,17 @@
     "@types/proj4": "^2.5.2",
     "@types/tinymce": "^4.6.6",
     "@types/uuid": "^9.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.2.0",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.7.0",
     "chromatic": "^6.17.3",
     "cypress": "^13.17.0",
     "cypress-watch-and-reload": "^1.10.6",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-vue": "^9.11.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-vue": "^9.32.0",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "prettier": "^2.8.4",
