--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "./dist/scss/main.scss": {
       "import": "./dist/scss/main.scss",
       "require": "./dist/scss/main.scss"
-    }
-    ,
+    },
     "./eslint": {
       "import": "./dist/eslint.config.js",
       "require": "./dist/eslint.config.js"
@@ -77,15 +76,17 @@
     "ol": "^7.4.0",
     "ol-contextmenu": "^5.2.1",
     "ol-ext": "^4.0.10",
-    "pinia": "^2.1.7",
     "proj4": "^2.9.0",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.21.1",
     "quill-html-edit-button": "^3.0.0",
     "quill-toggle-fullscreen-button": "^0.1.3",
     "uuid": "^9.0.0",
-    "vue": "^3.5.12",
     "vue-i18n": "9",
     "vue-quilly": "^1.0.5"
+  },
+  "peerDependencies": {
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
@@ -119,6 +120,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
+    "pinia": "^2.3.0",
     "prettier": "^2.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -131,6 +133,7 @@
     "typescript": "^5.7.2",
     "vite": "^5.4.10",
     "vite-plugin-static-copy": "^1.0.6",
+    "vue": "^3.5.13",
     "vue-eslint-parser": "^9.1.1",
     "vue-tsc": "^2.2.0"
   }
