--- a/.github/workflows/pre-release-package-manual.yml
+++ b/.github/workflows/pre-release-package-manual.yml
@@ -54,6 +54,8 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
+      - name: Pull the latest changes
+        run: git pull origin ${{ inputs.branch }}
       - uses: actions/download-artifact@v4
         with:
           name: dist
