--- a/.github/workflows/pre-release-package-manual.yml
+++ b/.github/workflows/pre-release-package-manual.yml
@@ -3,21 +3,18 @@ name: Manual Pre-Release Package Action
 on:
   workflow_dispatch:
     inputs:
-      branch:
-        description: 'Branch to trigger the workflow'
-        required: true
-        default: 'develop'
       version:
         description: 'Alpha version to set in package.json'
         required: true
-        default: '1.0.0-alpha.6'
+        default: 'x.x.x-alpha.x'
 
 jobs:
   build:
-    if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: develop # Always checkout the develop branch
       - uses: actions/setup-node@v4
         with:
           always-auth: true
@@ -32,7 +29,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add package.json
           git commit -m "Update version to ${{ inputs.version }}"
-          git push origin ${{ inputs.branch }}
+          git push origin develop # Always push to the develop branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: yarn ci
@@ -47,15 +44,14 @@ jobs:
 
   publish-gpr:
     needs: build
-    if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     permissions:
       packages: write
       contents: read
     steps:
       - uses: actions/checkout@v4
-      - name: Pull the latest changes
-        run: git pull origin ${{ inputs.branch }}
+        with:
+          ref: develop # Always checkout the develop branch
       - uses: actions/download-artifact@v4
         with:
           name: dist
