--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build:watch": "run-p type-check build-only:watch",
     "build-only": "vite build",
     "build-only:watch": "vite build --watch",
-    "test:unit": "cypress run --component --browser=chrome",
+    "test:unit": "cypress run --component --browser=chrome -e codeCoverageTasksRegistered=true",
     "test:unit:dev": "cypress open --component",
     "type-check": "vue-tsc --noEmit",
     "type-generation": "vue-tsc --declaration --emitDeclarationOnly",
@@ -48,7 +48,8 @@
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=CHROMATIC_PROJECT_TOKEN"
+    "chromatic": "npx chromatic --project-token=CHROMATIC_PROJECT_TOKEN",
+    "serve-coverage": "npx http-server -p 8080 -c-1 ./coverage"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -89,6 +90,7 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.14.0",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@storybook/addon-essentials": "^8.4.7",
@@ -119,6 +121,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-vue": "^9.32.0",
     "npm-run-all": "^4.1.5",
+    "nyc": "^17.1.0",
     "path": "^0.12.7",
     "pinia": "^2.3.0",
     "prettier": "^2.8.4",
@@ -132,6 +135,7 @@
     "tslib": "^2.5.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.10",
+    "vite-plugin-istanbul": "^7.0.0",
     "vite-plugin-static-copy": "^1.0.6",
     "vue": "^3.5.13",
     "vue-eslint-parser": "^9.1.1",
