--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -24,3 +24,7 @@ jobs:
         with:
           component: true
           browser: chrome
+          env:
+            CYPRESS_codeCoverageTasksRegistered: true
+      - name: Show Coverage Report in Logs
+        run: cat ./coverage/coverage-summary.json | jq
