--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "vue-quilly": "^1.0.5"
   },
   "peerDependencies": {
-    "pinia": "^2.1.7 || ^2.2.0 || ^2.3.0",
-    "vue": "^3.4.0 || ^3.5.0 || ^3.6.0"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.0"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
