--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./dist/vue-components.umd.js",
   "module": "./dist/vue-components.es.js",
   "typings": "./dist/src/main.d.ts",
-  "version": "3.4.0-alpha.4",
+  "version": "3.4.0",
   "exports": {
     ".": {
       "import": "./dist/vue-components.es.js",
