--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "@utils/*": ["./src/utils/*"],
       "@/*": ["./src/*"]
     },
-    "types": ["@intlify/unplugin-vue-i18n/messages", "vite/client"],
+    "types": ["@intlify/unplugin-vue-i18n/messages", "vite/client", "node"],
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
