--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "guid-typescript": "^1.0.9",
     "jsts": "2.7.2",
     "libphonenumber-js": "^1.10.37",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "ol": "^7.4.0",
     "ol-contextmenu": "^5.2.1",
     "ol-ext": "^4.0.10",
@@ -104,7 +104,7 @@
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsts": "^0.17.22",
-    "@types/lodash": "^4.17.14",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "22",
     "@types/proj4": "^2.5.2",
     "@types/tinymce": "^4.6.6",
