--- a/package.json
+++ b/package.json
@@ -1,31 +1,48 @@
 {
   "name": "@OnroerendErfgoed/vue_component_library",
   "type": "module",
+  "version": "4.0.0",
   "files": [
     "dist"
   ],
-  "main": "./dist/main.js",
-  "module": "./dist/main.js",
-  "types": "./dist/main.d.ts",
-  "version": "4.0.0-alpha.5",
   "exports": {
-    ".": {
-      "import": "./dist/main.js",
-      "types": "./dist/main.d.ts"
+    "./core": {
+      "import": "./dist/core.js",
+      "types": "./dist/core.d.ts"
+    },
+    "./forms": {
+      "import": "./dist/forms.js",
+      "types": "./dist/forms.d.ts"
+    },
+    "./layout": {
+      "import": "./dist/layout.js",
+      "types": "./dist/layout.d.ts"
     },
     "./grid": {
       "import": "./dist/grid.js",
       "types": "./dist/grid.d.ts"
     },
-    "./dist/vue-components.css": {
-      "import": "./dist/vue-components.css"
+    "./map": {
+      "import": "./dist/map.js",
+      "types": "./dist/map.d.ts"
     },
-    "./dist/scss/main.scss": {
-      "import": "./dist/scss/main.scss"
+    "./widgets": {
+      "import": "./dist/widgets.js",
+      "types": "./dist/widgets.d.ts"
+    },
+    "./servicess": {
+      "import": "./dist/servicess.js",
+      "types": "./dist/servicess.d.ts"
+    },
+    "./utils": {
+      "import": "./dist/utils.js",
+      "types": "./dist/utils.d.ts"
     },
     "./eslint": {
       "import": "./dist/eslint.config.js"
-    }
+    },
+    "./dist/vue-components.css": "./dist/vue-components.css",
+    "./dist/scss/main.scss": "./dist/scss/main.scss"
   },
   "repository": {
     "type": "git",
@@ -52,13 +69,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
     "@govflanders/vl-ui-autocomplete": "^18.1.1",
-    "@govflanders/vl-ui-design-system-style": "^3.1.3",
-    "@govflanders/vl-ui-design-system-vue3": "^6.2.1",
+    "@govflanders/vl-ui-design-system-style": "^3.2.3",
+    "@govflanders/vl-ui-design-system-vue3": "^8.0.2",
     "@govflanders/vl-ui-select": "^20.0.10",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@tinymce/tinymce-vue": "^4",
@@ -66,7 +81,6 @@
     "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.4.1",
     "ag-grid-vue3": "^34.3.1",
-    "axios": "^1.12.0",
     "axios-mock-adapter": "^1.22.0",
     "date-fns": "^2.30.0",
     "guid-typescript": "^1.0.9",
@@ -85,8 +99,14 @@
     "vue-quilly": "^1.0.5"
   },
   "peerDependencies": {
+    "axios": "^1.12.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.0"
+  },
+  "peerDependenciesMeta": {
+    "axios": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
@@ -122,6 +142,7 @@
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "pinia": "^2.3.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
