--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
       "import": "./dist/widgets.js",
       "types": "./dist/widgets.d.ts"
     },
-    "./servicess": {
-      "import": "./dist/servicess.js",
-      "types": "./dist/servicess.d.ts"
+    "./services": {
+      "import": "./dist/services.js",
+      "types": "./dist/services.d.ts"
     },
     "./utils": {
       "import": "./dist/utils.js",
@@ -72,49 +72,95 @@
     "chromatic": "npx chromatic --project-token=CHROMATIC_PROJECT_TOKEN"
   },
   "dependencies": {
+    "guid-typescript": "^1.0.9",
+    "uuid": "^9.0.0",
+    "date-fns": "^2.30.0",
+    "libphonenumber-js": "^1.10.37",
+    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.25.0"
+  },
+  "peerDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
-    "@govflanders/vl-ui-autocomplete": "^18.1.1",
-    "@govflanders/vl-ui-design-system-style": "^3.2.3",
-    "@govflanders/vl-ui-design-system-vue3": "^8.0.2",
-    "@govflanders/vl-ui-select": "^20.0.10",
+    "@govflanders/vl-ui-core": "~3.2.3",
+    "@govflanders/vl-ui-design-system-style": "~3.2.3",
+    "@govflanders/vl-ui-design-system-vue3": "~8.0.2",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@tinymce/tinymce-vue": "^4",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.4.1",
-    "ag-grid-vue3": "^34.3.1",
+    "ag-grid-vue3": "^34.0.0",
+    "axios": "^1.12.0",
     "axios-mock-adapter": "^1.22.0",
-    "date-fns": "^2.30.0",
-    "guid-typescript": "^1.0.9",
     "jsts": "2.7.2",
-    "libphonenumber-js": "^1.10.37",
     "lodash-es": "^4.17.21",
     "ol": "^7.4.0",
-    "ol-contextmenu": "^5.2.1",
-    "ol-ext": "^4.0.10",
+    "pinia": "^2.1.7",
     "proj4": "^2.9.0",
-    "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.21.1",
+    "quill": "^2.0.0",
     "quill-html-edit-button": "^3.0.0",
     "quill-toggle-fullscreen-button": "^0.1.3",
-    "uuid": "^9.0.0",
-    "vue-i18n": "9",
+    "vue": "^3.4.0",
+    "vue-i18n": "^9.0.0",
     "vue-quilly": "^1.0.5"
-  },
-  "peerDependencies": {
-    "axios": "^1.12.0",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.0"
   },
   "peerDependenciesMeta": {
     "axios": {
       "optional": true
+    },
+    "axios-mock-adapter": {
+      "optional": true
+    },
+    "ag-grid-vue3": {
+      "optional": true
+    },
+    "jsts": {
+      "optional": true
+    },
+    "proj4": {
+      "optional": true
+    },
+    "ol": {
+      "optional": true
+    },
+    "@vuelidate/core": {
+      "optional": true
+    },
+    "@vuelidate/validators": {
+      "optional": true
+    },
+    "@soerenmartius/vue3-clipboard": {
+      "optional": true
+    },
+    "@tinymce/tinymce-vue": {
+      "optional": true
+    },
+    "@vueuse/core": {
+      "optional": true
+    },
+    "quill": {
+      "optional": true
+    },
+    "quill-html-edit-button": {
+      "optional": true
+    },
+    "quill-toggle-fullscreen-button": {
+      "optional": true
+    },
+    "vue-quilly": {
+      "optional": true
     }
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
+    "@govflanders/vl-ui-design-system-style": "~3.2.3",
+    "@govflanders/vl-ui-design-system-vue3": "~8.0.2",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-links": "^8.4.7",
@@ -124,6 +170,7 @@
     "@storybook/builder-vite": "^8.4.7",
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3-vite": "^8.4.7",
+    "@tinymce/tinymce-vue": "^4",
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsts": "^0.17.22",
@@ -137,17 +184,29 @@
     "@vue/eslint-config-typescript": "^14.2.0",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.7.0",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
+    "@vueuse/core": "^10.4.1",
+    "ag-grid-vue3": "^34.0.0",
+    "axios": "^1.12.0",
+    "axios-mock-adapter": "^1.22.0",
     "chromatic": "^6.17.3",
     "cypress": "15.4.0",
     "cypress-watch-and-reload": "^1.10.6",
     "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-vue": "^9.32.0",
+    "jsts": "2.7.2",
     "npm-run-all": "^4.1.5",
+    "ol": "^7.4.0",
     "path": "^0.12.7",
     "pinia": "^2.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.5.3",
+    "proj4": "^2.9.0",
+    "quill": "^2.0.0",
+    "quill-html-edit-button": "^3.0.0",
+    "quill-toggle-fullscreen-button": "^0.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rollup": "^4.30.0",
@@ -162,6 +221,8 @@
     "vite-plugin-static-copy": "^1.0.6",
     "vue": "^3.5.13",
     "vue-eslint-parser": "^9.1.1",
+    "vue-i18n": "9",
+    "vue-quilly": "^1.0.5",
     "vue-tsc": "^2.2.0"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
