--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
       "import": "./dist/forms.js",
       "types": "./dist/forms.d.ts"
     },
+    "./editor" : {
+      "import": "./dist/editor.js",
+      "types": "./dist/editor.d.ts"
+    },
     "./layout": {
       "import": "./dist/layout.js",
       "types": "./dist/layout.d.ts"
@@ -74,7 +78,6 @@
   "dependencies": {
     "guid-typescript": "^1.0.9",
     "uuid": "^9.0.0",
-    "date-fns": "^2.30.0",
     "libphonenumber-js": "^1.10.37",
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.25.0"
   },
@@ -93,6 +96,7 @@
     "ag-grid-vue3": "^34.0.0",
     "axios": "^1.12.0",
     "axios-mock-adapter": "^1.22.0",
+    "date-fns": "^2.30.0",
     "jsts": "2.7.2",
     "lodash-es": "^4.17.21",
     "ol": "^7.4.0",
@@ -113,6 +117,9 @@
       "optional": true
     },
     "ag-grid-vue3": {
+      "optional": true
+    },
+    "date-fns": {
       "optional": true
     },
     "jsts": {
@@ -223,7 +230,8 @@
     "vue-eslint-parser": "^9.1.1",
     "vue-i18n": "9",
     "vue-quilly": "^1.0.5",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.0",
+    "date-fns": "^2.30.0"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
